fixed trash can icon color on dark mode

--- a/site/src/pages/RoadmapPage/Transfer.scss
+++ b/site/src/pages/RoadmapPage/Transfer.scss
@@ -76,3 +76,12 @@
     color: red;
   }
 }
+
+[data-theme='dark'] {
+  .entry-delete-icon {
+    color: white;
+    &:hover {
+      color: red;
+    }
+  }
+}
